custom runtime image

--- a/SU-301-Practical-Guide-to-Leveraging-JFrog-Pipelines-for-Jenkins-Users/lab1/java/pipelines.steps.yml
+++ b/SU-301-Practical-Guide-to-Leveraging-JFrog-Pipelines-for-Jenkins-Users/lab1/java/pipelines.steps.yml
@@ -1,6 +1,12 @@
 pipelines:
   - name: lab1_backapp_mvn
     configuration:
+      runtime:
+        type: image
+        image:
+          custom:
+            name: releases-docker.jfrog.io/jfrog/pipelines-u18java
+            tag: 14
       environmentVariables:
         readOnly:
           virtualRepo: urs-mvn
