custom runtime image

--- a/SU-301-Practical-Guide-to-Leveraging-JFrog-Pipelines-for-Jenkins-Users/lab1/java/pipelines.steps.yml
+++ b/SU-301-Practical-Guide-to-Leveraging-JFrog-Pipelines-for-Jenkins-Users/lab1/java/pipelines.steps.yml
@@ -6,7 +6,7 @@ pipelines:
         image:
           custom:
             name: releases-docker.jfrog.io/jfrog/pipelines-u18java
-            tag: 14
+            tag: '14'
       environmentVariables:
         readOnly:
           virtualRepo: urs-mvn
